Move UP5 to its new name SITU5_MOSAIC

--- a/src/components/backgroundselector/style/backgroundselector.less
+++ b/src/components/backgroundselector/style/backgroundselector.less
@@ -100,8 +100,8 @@
     background-size: 38px 38px;
   }
 
-  .ga-UP5 {
-    background-image: data-uri('UP5.png');
+  .ga-SITU5_MOSAIC {
+    background-image: data-uri('SITU5_MOSAIC.png');
     background-size: 38px 38px;
   }
 
@@ -234,8 +234,8 @@
     background-image: data-uri('terrain-rect.png');
   }
 
-  .ga-UP5 {
-    background-image: data-uri('UP5-rect.png');
+  .ga-SITU5_MOSAIC {
+    background-image: data-uri('SITU5_MOSAIC-rect.png');
   }
 
   .ga-ORTHOPHOTOS_2008 {
