Translate the default title of the printed map
Close #96

--- a/src/components/print/partials/print.html
+++ b/src/components/print/partials/print.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label class="col-xs-4 control-label" translate>title</label>
     <div class="col-xs-8">
-      <input class="form-control" ng-model="options.title" maxlength="80">
+      <input class="form-control" ng-model="options.title" placeholder="{{ options.titlePlaceholder | translate }}" maxlength="80">
     </div>
   </div>
   <div class="form-group">
