N16 Add backgroundSelector style and data

--- a/src/components/backgroundselector/style/backgroundselector.less
+++ b/src/components/backgroundselector/style/backgroundselector.less
@@ -115,6 +115,21 @@
     background-size: 38px 38px;
   }
 
+  .ga-PLAN_25000_COULEUR {
+    background-image: data-uri('PLAN_25000_COULEUR.png');
+    background-size: 38px 38px;
+  }
+
+  .ga-PLAN_25000_GRIS {
+    background-image: data-uri('SITU5_MOSAIC.png');
+    background-size: 38px 38px;
+  }
+
+  .ga-DTM_2011 {
+    background-image: data-uri('DTM_2011.png');
+    background-size: 38px 38px;
+  }
+
   .ga-voidLayer {
     background-image: data-uri('voidLayer.png');
     background-size: 38px 38px;
@@ -246,6 +261,17 @@
     background-image: data-uri('ORTHOPHOTOS_2011-rect.png');
   }
 
+  .ga-PLAN_25000_COULEUR {
+    background-image: data-uri('PLAN_25000_COULEUR-rect.png');
+  }
+
+  .ga-PLAN_25000_GRIS {
+    background-image: data-uri('SITU5_MOSAIC-rect.png');
+  }
+
+  .ga-DTM_2011 {
+    background-image: data-uri('DTM_2011-rect.png');
+  }
   .ga-bg-layer-0 {
     right: 35px;
   }
