--- a/src/style/ga_bootstrap.less
+++ b/src/style/ga_bootstrap.less
@@ -29,12 +29,12 @@
 @import "../../node_modules/bootstrap/less/component-animations.less";
 /* @import "../../node_modules/bootstrap/less/glyphicons.less"; */
 @import "../../node_modules/bootstrap/less/dropdowns.less";
-/* @import "../../node_modules/bootstrap/less/button-groups.less"; */
+ @import "../../node_modules/bootstrap/less/button-groups.less"; 
 @import "../../node_modules/bootstrap/less/input-groups.less";
 @import "../../node_modules/bootstrap/less/navs.less";
 @import "../../node_modules/bootstrap/less/navbar.less";
 /* @import "../../node_modules/bootstrap/less/breadcrumbs.less"; */
-/* @import "../../node_modules/bootstrap/less/pagination.less"; */
+@import "../../node_modules/bootstrap/less/pagination.less"; 
 /* @import "../../node_modules/bootstrap/less/pager.less"; */
 /* @import "../../node_modules/bootstrap/less/labels.less"; */
 @import "../../node_modules/bootstrap/less/badges.less";
