--- a/src/components/features/style/features.less
+++ b/src/components/features/style/features.less
@@ -1,7 +1,71 @@
 @tooltip-width: 450;
 @tooltip-height: 600;
 
+[ga-popup] {
+   &.ga-popup-features {
+    max-width: none;
+    max-height: none;
+    overflow: hidden;
+    top: auto;
+    bottom: 34px;
+    border-radius: 0;
+    background-clip: initial;
+    height: 300px;
+
+    .ga-popup-content {
+      max-height: inherit;
+    }
+
+    @media (max-width: @screen-tablet) {
+      left: 0 !important;
+      right: 0 !important;
+      bottom: 0 !important;
+    }
+  }
+}
+
 .gf3-features-popup {
+
+  .grid-container {
+    overflow: hidden;
+
+    [name=udt-toolbar] {
+      float: right;
+
+      .pull-left {
+        margin-right: 5px;
+      }
+
+      .pull-right .btn-group {
+        margin-right: 5px;
+      }
+    }
+  }
+
+  [name=udt-table] {
+    overflow-y: auto;
+    max-height: 180px;
+    width: 100%;
+    margin-bottom: 0;
+    padding-bottom: 0;
+
+    .table {
+      margin-bottom: 0;
+    }
+  }
+
+  .pagination > .active > a,
+  .pagination > .active > a:focus,
+  .pagination > .active > a:hover,
+  .pagination > .active > span,
+  .pagination > .active > span:focus,
+  .pagination > .active > span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #337ab7;
+    border-color: #337ab7;
+  }
 
   .popover-content {
     padding: 0px;
@@ -20,7 +84,7 @@
     border-bottom-color: #c7c7c7;
   }
 
-  .nav-tabs a {
+  .nav-tabs li a {
     text-decoration: none;
 
     &.ga-active {
