Prefix non Swisstopo modules by gf
Impact new or rewritten components:

- Print
- features
- import WMS/WMTS
- draw with webdav

Close #63

--- a/src/components/draw/partials/draw.html
+++ b/src/components/draw/partials/draw.html
@@ -2,13 +2,13 @@
   <span class="ga-success" translate="{{statusMsgId}}"></span>
 </div>
 <div class="ga-draw-buttons">
-  <div ga-webdav-save-select
-       ga-drawing-save="drawingSave"
+  <div gf-webdav-save-select
+       gf-drawing-save="drawingSave"
        ng-if="!feedbackPopupShown">
   </div>
-  <div ga-webdav-connect
-       ga-webdav="webdav"
-       ga-drawing-save="drawingSave"
+  <div gf-webdav-connect
+       gf-webdav="webdav"
+       gf-drawing-save="drawingSave"
        ng-if="!feedbackPopupShown"></div>
   <button ng-repeat="tool in options.tools"
           ng-click="toggleTool($event, tool)"
