--- a/src/components/features/partials/features.html
+++ b/src/components/features/partials/features.html
@@ -1,6 +1,6 @@
 <div ga-popup="popupToggle"
      ga-popup-options="options.popupOptions">
-  <div class="ga-features-popup">
+  <div class="gf-features-popup">
     <div class="htmlpopup-content">
       <ul class="nav-tabs nav">
         <li ng-repeat="(layerId, v) in options.features">
