--- a/src/components/features/style/features.less
+++ b/src/components/features/style/features.less
@@ -1,7 +1,7 @@
 @tooltip-width: 450;
 @tooltip-height: 600;
 
-.ga-features-popup {
+.gf-features-popup {
 
   .popover-content {
     padding: 0px;
