--- a/src/components/importows/style/importows.less
+++ b/src/components/importows/style/importows.less
@@ -1,4 +1,4 @@
-[ga-import-ows] {
+[gf-import-ows] {
   position: relative;
   background-color: white;
   padding: 10px;
@@ -67,7 +67,7 @@
     }
   }
 
-  .ga-import-ows-container {
+  .gf-import-ows-container {
     width: 330px;
     border: 1px solid #dddddd;
     border-collapse: separate;
@@ -88,7 +88,7 @@
     }
   }
 
-  .ga-import-ows-header {
+  .gf-import-ows-header {
     width: 100%;
     height: 30px;
     text-align: center;
@@ -100,7 +100,7 @@
       height: 100%;
     }
   }
-  .ga-import-ows-content {
+  .gf-import-ows-content {
     width: 100%;
     height: 240px;
     position: relative;
@@ -152,20 +152,20 @@
     }
   }
 
-  .ga-import-ows-container, .ga-import-ows-descr {
+  .gf-import-ows-container, .gf-import-ows-descr {
     display: inline-block;
     position: relative;
     margin: 10px 0px 0px 0px;
   }
 
-  .ga-import-ows-connect {
+  .gf-import-ows-connect {
     position: absolute;
     left: 596px;
     top: 0px;
     width: 120px;
   }
 
-  .ga-import-ows-open {
+  .gf-import-ows-open {
     cursor: pointer;
     position: absolute;
     left: 566px;
@@ -173,12 +173,12 @@
     font-size: 14px;
   }
 
-  .ga-import-ows-descr {
+  .gf-import-ows-descr {
     vertical-align: top;
     margin-left: 20px;
   }
  
-  .ga-import-ows-add {
+  .gf-import-ows-add {
     width: 100%;
     margin-top: 10px;
   }
