--- a/src/components/webdav/partials/webdavconnect.html
+++ b/src/components/webdav/partials/webdavconnect.html
@@ -1,4 +1,4 @@
-<div class="panel-collapse collapse in panel panel-default ga-webdav-connect"
+<div class="panel-collapse collapse in panel panel-default gf-webdav-connect"
      aria-expanded="true"
      ng-if="drawingSave.value === 'custom'"
      >
