Switch custom prefix from 'gf' to 'gf3'
The 'gf' prefix conflicted with the built version of olcesium

--- a/src/components/features/style/features.less
+++ b/src/components/features/style/features.less
@@ -1,7 +1,7 @@
 @tooltip-width: 450;
 @tooltip-height: 600;
 
-.gf-features-popup {
+.gf3-features-popup {
 
   .popover-content {
     padding: 0px;
