--- a/src/components/draw/partials/draw.html
+++ b/src/components/draw/partials/draw.html
@@ -2,13 +2,13 @@
   <span class="ga-success" translate="{{statusMsgId}}"></span>
 </div>
 <div class="ga-draw-buttons">
-  <div gf-webdav-save-select
-       gf-drawing-save="drawingSave"
+  <div gf3-webdav-save-select
+       gf3-drawing-save="drawingSave"
        ng-if="!feedbackPopupShown">
   </div>
-  <div gf-webdav-connect
-       gf-webdav="webdav"
-       gf-drawing-save="drawingSave"
+  <div gf3-webdav-connect
+       gf3-webdav="webdav"
+       gf3-drawing-save="drawingSave"
        ng-if="!feedbackPopupShown"></div>
   <button ng-repeat="tool in options.tools"
           ng-click="toggleTool($event, tool)"
