--- a/src/components/importows/partials/importows-item.html
+++ b/src/components/importows/partials/importows-item.html
@@ -12,7 +12,7 @@
 </div>
 <ul class="ga-child-group" ng-if="!!(layer.Layer)">
   <li ng-repeat="layer in layer.Layer | orderBy:'Title'">
-    <div gf-import-ows-item></div>
+    <div gf3-import-ows-item></div>
   </li>
 </ul>
  
