Correct CSS for background selector

--- a/src/components/backgroundselector/style/backgroundselector.less
+++ b/src/components/backgroundselector/style/backgroundselector.less
@@ -43,39 +43,44 @@
     background-color: rgba(255, 255, 255, 0.95);
    }
 
+  .ga-bg-layer-bt-text {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
   .ga-SITU5_MOSAIC {
     background-image: data-uri('SITU5_MOSAIC.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-ORTHOPHOTOS_2011 {
     background-image: data-uri('ORTHOPHOTOS_2011.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-ORTHOPHOTOS_2008 {
     background-image: data-uri('ORTHOPHOTOS_2008.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-PLAN_25000_COULEUR {
     background-image: data-uri('PLAN_25000_COULEUR.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-PLAN_25000_GRIS {
     background-image: data-uri('SITU5_MOSAIC.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-DTM_2011 {
     background-image: data-uri('DTM_2011.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   .ga-voidLayer {
     background-image: data-uri('voidLayer.png');
-    background-size: 38px 38px;
+    background-size: auto auto;
   }
 
   &.ga-bg-mobile {
@@ -120,22 +125,22 @@
 
     .ga-pixelkarte-farbe {
       background-image: data-uri('pixelkarte-farbe.png');
-      background-size: 38px 38px;
+      background-size: auto auto;
     }
 
     .ga-pixelkarte-grau {
       background-image: data-uri('pixelkarte-grau.png');
-      background-size: 38px 38px;
+      background-size: auto auto;
     } 
 
     .ga-swissimage {
       background-image: data-uri('swissimage.png');
-      background-size: 38px 38px;
+      background-size: auto auto;
     }
 
     .ga-voidLayer {
       background-image: data-uri('voidLayer.png');
-      background-size: 38px 38px;
+      background-size: auto auto;
     }
 
     .ga-bg-layer-0 {
