--- a/src/components/offline/partials/offline-bt.html
+++ b/src/components/offline/partials/offline-bt.html
@@ -1,5 +1,5 @@
 <button class="ga-btn"
-        ng-if="!isIE9"
+        ng-if="!isIE9 && allowOffline"
         ng-class="{'ga-active': (hasOfflineData && !isDownloading)}" 
         ng-hide="offline && !hasOfflineData"
         ng-click="onClick($event)"></button>
