Correct portal logo

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -603,6 +603,22 @@ input[type=text][readonly] {
       display: none;
     }
   }
+
+  &.ga-logo-de {
+    background-image: data-uri('../img/logo.ch.de.png');
+  }
+  &.ga-logo-fr {
+    background-image: data-uri('../img/logo.ch.fr.png');
+  }
+  &.ga-logo-it {
+    background-image: data-uri('../img/logo.ch.it.png');
+  }
+  &.ga-logo-rm {
+    background-image: data-uri('../img/logo.ch.rm.png');
+  }
+  &.ga-logo-en {
+    background-image: data-uri('../img/logo.ch.en.png');
+  }
 }
 
 #toptools {
