Add spinner while printing

--- a/src/components/print/style/print.less
+++ b/src/components/print/style/print.less
@@ -1,4 +1,4 @@
-[ga-print] {
+[gf3-print] {
   .col-xs-4 {
     width: 35.2%;
   }
@@ -26,5 +26,12 @@
 
   .ie .ga-checkbox {
     padding-left: 0px;
+  }
+
+  .spin-bg {
+    background-image: url(/img/spin.gif);
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: 16px 16px;
   }
 }
