Restore animation on bg selector
Close #109

--- a/src/components/backgroundselector/style/backgroundselector-sigeom.less
+++ b/src/components/backgroundselector/style/backgroundselector-sigeom.less
@@ -82,27 +82,34 @@
   &.ga-bg-desktop {
     &.ga-open {
       .ga-bg-layer-0 {
-        right: 35px;
+        .translate3d(-25px, 0, 0);
+        -ms-transform: translateY(-25px); /* IE 9*/
       }
 
       .ga-bg-layer-1 {
-        right: 136px;
+        .translate3d(-126px, 0, 0);
+        -ms-transform: translateY(-126px); /* IE 9*/
         @media (max-width: @screen-tablet) {
-          right: 88px;
+          .translate3d(-128px, 0, 0);
+          -ms-transform: translateY(-128px); /* IE 9*/
         }
       }
 
       .ga-bg-layer-2 {
-        right: 237px;
+        .translate3d(-227px, 0, 0);
+        -ms-transform: translateY(-227px); /* IE 9*/
         @media (max-width: @screen-tablet) {
-          right: 141px;
+          .translate3d(-231px, 0, 0);
+          -ms-transform: translateY(-231px); /* IE 9*/
         }
       }
 
       .ga-bg-layer-3 {
-        right: 338px;
+        .translate3d(-328px, 0, 0);
+        -ms-transform: translateY(-328px); /* IE 9*/
         @media (max-width: @screen-tablet) {
-          right: 194px;
+          .translate3d(-334px, 0, 0);
+          -ms-transform: translateY(-334px); /* IE 9*/
         }
       }
 
