Use customer.less for customer specific LESS code

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -22,7 +22,7 @@
 @import "../components/slider/style/slider.less";
 @import "../components/timeselector/style/timeselector.less";
 @import "../components/backgroundselector/style/backgroundselector.less";
-@import "../components/backgroundselector/style/backgroundselector-sigeom.less";
+@import "../components/backgroundselector/style/backgroundselector-gf3.less";
 @import "../components/swipe/style/swipe.less";
 @import "../components/measure/style/measure.less";
 @import "../components/layermanager/style/layermanager.less";
@@ -35,6 +35,8 @@
 @import "../components/controls3d/style/controls3d.less";
 @import "../components/shop/style/shop.less";
 @import "../components/shop/style/shop-rectangle.less";
+
+@import "./customer.less";
 
 
 
