--- a/src/components/contextpopup/partials/contextpopup.html
+++ b/src/components/contextpopup/partials/contextpopup.html
@@ -8,13 +8,13 @@
       <table>
           <tbody>
           <tr>
-              <td>CH1903 / LV03</td>
+              <td>{{defaultEpsgContextPopupTitle}}</td>
               <td><a href="{{contextPermalink}}"
-                     target="_blank">{{coord21781}}</a></td>
+                     target="_blank">{{coordDefaultEpsg}}</a></td>
           </tr>
           <tr>
-              <td>CH1903+ / LV95</td>
-              <td>{{coord2056}}</td>
+              <td>{{secondaryEpsgContextPopupTitle}}</td>
+              <td>{{coordSecondaryEpsg}}</td>
           </tr>
           <tr>
               <td>WGS 84 (lat/lon)</td>
