Disable the share button when the drawing is not saved
It was when the drawing was saved on our server.

--- a/src/components/draw/partials/draw.html
+++ b/src/components/draw/partials/draw.html
@@ -38,7 +38,7 @@
     </li>
     <li class="col-sm-4 col-xs-4">
       <a href="" class="btn"
-         ng-disabled="!canShare() || drawingSave.value == 'server'"
+         ng-disabled="!canShare() || drawingSave.value !== 'server'"
          ng-click="share($event)"
          translate>share</a>
     </li>
