--- a/src/components/layermanager/style/layermanager.less
+++ b/src/components/layermanager/style/layermanager.less
@@ -188,6 +188,12 @@
     color: red;
   }
 
+  .fa-edit {
+    display: block;
+    position: absolute;
+    right: 20px;
+  }
+
   .ga-layer-ordering {
     position: absolute;
     top: 0;
