--- a/src/style/app.less
+++ b/src/style/app.less
@@ -45,6 +45,7 @@
 @import "../components/shop/style/shoprectangle.less";
 @import "../components/tabs/style/tabs.less";
 
+@import "./gf3.less";
 @import "./customer.less";
 
 
