Allow WFS layers to be edited and saved
- Add the server URL to the source of the layer.
- Add the relevant properties to the layer (eg featureNS)
- Add cancel and save buttons
- Add a save message (pending, success, error)
- Add save logic
- Add interaction with the edited layer to edit it
- Track updated features to save them

--- a/src/components/gf3Edit/partials/edit.html
+++ b/src/components/gf3Edit/partials/edit.html
@@ -1,3 +1,8 @@
 <div>
-  {{ layer.label }}
+  <p ng-if="message">{{ message }}</p>
+
+  <div class="gf3-centered-text">
+    <button class="btn btn-danger" ng-click="cancel()" translate>Cancel</button>
+    <button class="btn btn-default" ng-click="save()" translate>Save</button>
+  </div>
 </div>
