--- a/src/style/gf3.less
+++ b/src/style/gf3.less
@@ -1,6 +1,11 @@
 @import "../components/gf3Edit/style/edit.less";
 
 
+.gf3-centered-text {
+ text-align: center;
+}
+
+
 .gf3-edit-active {
 
   #header {
