--- a/src/style/gf3.less
+++ b/src/style/gf3.less
@@ -1,7 +1,8 @@
 @import "../components/gf3Edit/style/edit.less";
 
 
-.gf3-centered-text {
+.gf3-buttons-bar {
+ margin-bottom: 1em;
  text-align: center;
 }
 
