Allow the user to add features to a WFS layer
The user can add a feature. The type of feature is based on the geometry
of the layer. Currently, only POINTS, LINES and POLYGONS are supported.

--- a/src/components/gf3Edit/partials/edit.html
+++ b/src/components/gf3Edit/partials/edit.html
@@ -10,6 +10,16 @@
             }">
       <i class="fa fa-remove"></i>
     </button>
+    <button class="btn btn-success"
+            ng-class="{
+              'adding-feature': addingFeature,
+            }"
+            ng-click="toggleAddFeature()"
+            translate-attr="{
+              'title': 'add',
+            }">
+      <i class="fa fa-plus"></i>
+    </button>
   </div>
 
   <div class="gf3-buttons-bar">
