Ask confirmation before leaving if user has unsaved editions
- Use globals.gf3EditInfos to exchange dirty status between the main
controller and the gf3-edit directive
- Set infos.dirty to true when the user modifications the layer
- Set infos.dirty to false after canceling modifications or saving them

--- a/src/components/gf3Edit/partials/edit.html
+++ b/src/components/gf3Edit/partials/edit.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="gf3-buttons-bar">
-    <button class="btn btn-danger" ng-click="cancel()" translate>Cancel</button>
-    <button class="btn btn-default" ng-click="save()" translate>Save</button>
+    <button class="btn btn-danger" ng-click="cancel()" ng-disabled="!infos.dirty" translate>Cancel</button>
+    <button class="btn btn-default" ng-click="save()" ng-disabled="!infos.dirty" translate>Save</button>
   </div>
 </div>
