--- a/src/components/gf3Edit/style/edit.less
+++ b/src/components/gf3Edit/style/edit.less
@@ -1,5 +1,27 @@
 [gf3-edit] {
+  hr {
+    margin: 5px 0;
+  }
+
   .adding-feature {
     background-color: #1A3D1A;
+  }
+
+  .fa-plus {
+    border: 0 !important;
+    box-shadow: unset !important;
+    font-size: 14px !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  .ga-more {
+    .row {
+      text-align: center;
+    }
+
+    .vr {
+      border-right: #e5e5e5 1px solid;
+    }
   }
 }
