Enable attributes edition with WFS-T
- Store the list and description of a layer in the ol layer object.
- Pass the list of the attributes of the layer to the popup.
- Emit an event each time an attribute is modified to update the "save"
message.
- Add fields to view and edit attributes to the proper directive.

--- a/src/components/gf3Edit/partials/editfeatureattrs.html
+++ b/src/components/gf3Edit/partials/editfeatureattrs.html
@@ -1,2 +1,28 @@
-<div>
+<div class="form-group" ng-repeat="attr in attributes">
+  <label for="layer-attr-{{ attr.name }}">{{ attr.name}}</label>
+  <div ng-switch="attr.type">
+    <input ng-switch-when="int"
+           id="layer-attr-{{ attr.name }}"
+           class="form-control"
+           ng-change="updateValue(attr.name)"
+           ng-model="values[attr.name]"
+           ng-model-options="{ debounce: 200 }"
+           type="number"
+           step="1" />
+    <input ng-switch-when="decimal"
+           id="layer-attr-{{ attr.name }}"
+           class="form-control"
+           ng-change="updateValue(attr.name)"
+           ng-model="values[attr.name]"
+           ng-model-options="{ debounce: 200 }"
+           type="number"
+           step="any" />
+    <input ng-switch-default
+           id="layer-attr-{{ attr.name }}"
+           class="form-control"
+           ng-change="updateValue(attr.name)"
+           ng-model="values[attr.name]"
+           ng-model-options="{ debounce: 200 }"
+           type="text" />
+  </div>
 </div>
