Display an error message if the WFS server answer with an error message
The WFS server will respond with a 200 status code in case of error.
Check the response to know if there was an error or not. If so, we
display it to the user.

--- a/src/components/gf3Edit/partials/edit.html
+++ b/src/components/gf3Edit/partials/edit.html
@@ -1,5 +1,7 @@
 <div>
   <p ng-if="message">{{ message }}</p>
+  <p class="alert-danger"
+     ng-repeat="error in saveErrors">{{ error }}</p>
 
   <div class="gf3-buttons-bar">
     <button class="btn btn-default"
